change naming of images in exit plane from fourier_potential to fourier_phase

--- a/docs/examples/simulate-image.ipynb
+++ b/docs/examples/simulate-image.ipynb
@@ -152,9 +152,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Then, choose a model for the solvent scattering potential. The amplitude is the\n",
-    "# (squared) characteristic phase shift from the scattering potential, and the scale is\n",
-    "# the characteristic length scale of the potential.\n",
+    "# Then, choose a model for the solvent. The amplitude is the\n",
+    "# (squared) characteristic phase shift of the ice phase shifts, and the length_scale is\n",
+    "# their characteristic length scale.\n",
     "solvent = cs.GaussianIce(\n",
     "    variance=op.Lorenzian(amplitude=0.005**2, length_scale=2.0 * potential.voxel_size)\n",
     ")"
@@ -166,7 +166,7 @@
    "source": [
     "Finally, we create an `ImageConfig` and initialize our `ImagePipeline`. In this example, we would like to simulate images at each stage of the image formation process. This is controlled by the modeling complexity in the `Instrument`, which here has three levels.\n",
     "\n",
-    "**1. If the `Instrument` just has an accelerating voltage and a dose:** In this case, the returned \"image\" is the scattering potential in the exit plane.\n",
+    "**1. If the `Instrument` just has an accelerating voltage and a dose:** In this case, the returned \"image\" is the phase shifts in the exit plane.\n",
     "\n",
     "**2. If the `Instrument` also has an optics model:** The returned \"image\" here is the squared wavefunction in the detector plane.\n",
     "\n",
@@ -266,7 +266,7 @@
     "    compute_noisy_image(scattering_pipeline, key),\n",
     "    fig,\n",
     "    ax1,\n",
-    "    label=\"Scattering potential at exit plane\",\n",
+    "    label=\"Phase shifts at exit plane\",\n",
     ")\n",
     "im2 = plot_image(\n",
     "    compute_noisy_image(optics_pipeline, key),\n",
@@ -286,7 +286,7 @@
    "source": [
     "What if we did not want to include noise in the simulation? In this case, the three outputs are\n",
     "\n",
-    "**1. If there the `Instrument` just has an accelerating voltage and a dose:** The returned \"image\" is the scattering potential in the exit plane including stochasticity, which here we use in the `solvent` model.\n",
+    "**1. If there the `Instrument` just has an accelerating voltage and a dose:** The returned \"image\" is the phase shifts in the exit plane including stochasticity, which here we use in the `solvent` model.\n",
     "\n",
     "**2. If the `Instrument` also has an optics model:** Again, the returned \"image\" is the squared wavefunction in the detector plane.\n",
     "\n",
@@ -318,7 +318,7 @@
     "    compute_image(scattering_pipeline),\n",
     "    fig,\n",
     "    ax1,\n",
-    "    label=\"Scattering potential at exit plane\",\n",
+    "    label=\"Phase shifts at exit plane\",\n",
     ")\n",
     "im2 = plot_image(\n",
     "    compute_image(optics_pipeline),\n",
