change recommendation for how to instantiate pytrees with vmap. eqxi.if_mapped changes everything

--- a/docs/examples/simulate-micrograph.ipynb
+++ b/docs/examples/simulate-micrograph.ipynb
@@ -107,14 +107,14 @@
    "source": [
     "from functools import partial\n",
     "\n",
-    "from jaxtyping import PRNGKeyArray\n",
+    "import equinox as eqx\n",
+    "import equinox.internal as eqxi\n",
+    "from jaxtyping import PRNGKeyArray, PyTree\n",
     "\n",
     "\n",
-    "@partial(jax.vmap, in_axes=[0, None])\n",
-    "def make_poses(\n",
-    "    key: PRNGKeyArray,\n",
-    "    config: cs.ImageConfig,\n",
-    "):\n",
+    "@partial(eqx.filter_vmap, in_axes=(0, None), out_axes=eqxi.if_mapped(axis=0))\n",
+    "def make_pipeline(key: PRNGKeyArray, no_vmap: tuple[PyTree, ...]) -> cs.ImagePipeline:\n",
+    "    config, potential, integrator, instrument = no_vmap\n",
     "    # ... instantiate rotations\n",
     "    rotation = SO3.sample_uniform(key)\n",
     "    # ... now in-plane translation\n",
@@ -127,10 +127,25 @@
     "    # ... convert 2D in-plane translation to 3D, setting the out-of-plane translation to\n",
     "    # zero\n",
     "    offset_in_angstroms = jnp.pad(in_plane_offset_in_angstroms, ((0, 1),))\n",
-    "    # Build the pose and return\n",
-    "    return cs.QuaternionPose.from_rotation_and_translation(\n",
+    "    # ... build the pose\n",
+    "    pose = cs.QuaternionPose.from_rotation_and_translation(\n",
     "        rotation, offset_in_angstroms\n",
-    "    )"
+    "    )\n",
+    "    # ... build the Specimen and ImagePipeline as usual and return\n",
+    "    specimen = cs.Specimen(potential, integrator, pose)\n",
+    "    return cs.ImagePipeline(config, specimen, instrument)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "!!! info \"What's with the `out_axes=eqxi.if_mapped(axis=0)`?\"\n",
+    "    \n",
+    "    When we create a pytree with `eqx.filter_vmap` (or `jax.vmap`), `out_axes` should have the same structure as the output pytree. If `out_axes` is set to `None` at a particular leaf, this\n",
+    "    says that we do not want to broadcast that leaf (of course, this only works for unmapped leaves). By default `jax.vmap` sets `out_axes=0`, so all unmapped leaves get broadcasted. `equinox` allows us to pass `out_axes=eqxi.if_mapped(axes=0)`, which specifies *not* to broadcast pytree leaves unless the leaves are directly mapped.\n",
+    "\n",
+    "    When building an `ImagePipeline`, it is very important that we do not broadcast arbitrary leaves! For example, an `ImageConfig` stores the coordinate systems for our image. Without the `out_axes=eqxi.if_mapped(axes=0)` specification, the `make_pipeline` would output an `ImagePipeline.config` whose coordinate systems have a batch dimension. This takes up unecessary memory."
    ]
   },
   {
@@ -143,21 +158,17 @@
     "number_of_poses = 20\n",
     "keys = jax.random.split(jax.random.PRNGKey(12345), number_of_poses)\n",
     "\n",
-    "# ... instantiate the poses\n",
-    "poses = make_poses(keys, config)\n",
-    "\n",
-    "# ... build the Specimen and ImagePipeline as usual\n",
-    "specimen = cs.Specimen(potential, integrator, poses)\n",
-    "pipeline = cs.ImagePipeline(config, specimen, instrument)"
+    "# ... instantiate the pipeline\n",
+    "pipeline = make_pipeline(keys, (config, potential, integrator, instrument))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This may be a little odd at first. We have contructed a pipeline, where if we were to directly call its `render` method, it would not work. Think of it this way: because we created our `pose`s with a `vmap`, functions can now only be called after crossing `vmap` boundaries. There is very good reason for this! To learn more, read the section of the equinox documentation on [model ensembling](https://docs.kidger.site/equinox/tricks/#ensembling).\n",
+    "This may be a little odd at first. We have contructed a pipeline, where if we were to directly call its `render` method, it would not work. Think of it this way: because we created our `pipeline`s with a `vmap`, functions can now only be called after crossing `vmap` boundaries. There is very good reason for this! To learn more, read the section of the equinox documentation on [model ensembling](https://docs.kidger.site/equinox/tricks/#ensembling).\n",
     "\n",
-    "Now that we have an `ImagePipeline` with a batched set of poses, we need some way of telling our `vmap` exactly what pytree leaves are batched. One way `equinox` does this is by using pointers to particular pytree leaves to create what is called a `filter_spec`."
+    "Now that we have an `ImagePipeline` with a batched set of poses, we need some way of telling our `vmap` exactly what pytree leaves have batch dimensions. One way `equinox` does this is by using pointers to particular pytree leaves to create what is called a `filter_spec`."
    ]
   },
   {
