reduce the number of submodules

--- a/docs/examples/simulate-micrograph.ipynb
+++ b/docs/examples/simulate-micrograph.ipynb
@@ -49,8 +49,8 @@
    "outputs": [],
    "source": [
     "# CryoJAX imports\n",
-    "import cryojax.simulator as cs\n",
-    "from cryojax.io import read_array_with_spacing_from_mrc\n",
+    "import cryojax.simulator as cxs\n",
+    "from cryojax.data import read_array_with_spacing_from_mrc\n",
     "from cryojax.rotations import SO3"
    ]
   },
@@ -70,26 +70,26 @@
     "# First, load the scattering potential and projection method\n",
     "filename = \"./data/ribosome_4ug0_scattering_potential_from_cistem.mrc\"\n",
     "real_voxel_grid, voxel_size = read_array_with_spacing_from_mrc(filename)\n",
-    "potential = cs.FourierVoxelGridPotential.from_real_voxel_grid(\n",
+    "potential = cxs.FourierVoxelGridPotential.from_real_voxel_grid(\n",
     "    real_voxel_grid, voxel_size, pad_scale=2\n",
     ")\n",
-    "integrator = cs.FourierSliceExtract(interpolation_order=1)\n",
+    "integrator = cxs.FourierSliceExtract(interpolation_order=1)\n",
     "\n",
     "# ... and build the instrument\n",
     "voltage_in_kilovolts = 300.0\n",
-    "optics = cs.WeakPhaseOptics(\n",
-    "    ctf=cs.CTF(\n",
+    "optics = cxs.WeakPhaseOptics(\n",
+    "    ctf=cxs.CTF(\n",
     "        defocus_u_in_angstroms=10000.0,\n",
     "        defocus_v_in_angstroms=10000.0,\n",
     "    )\n",
     ")\n",
-    "instrument = cs.Instrument(voltage_in_kilovolts, optics=optics)\n",
+    "instrument = cxs.Instrument(voltage_in_kilovolts, optics=optics)\n",
     "\n",
     "# ... and finally the config\n",
     "shape = (400, 600)\n",
     "pixel_size = potential.voxel_size  # Angstroms\n",
     "image_size = np.asarray(shape) * pixel_size\n",
-    "config = cs.ImageConfig(shape, pixel_size, pad_scale=1.1)"
+    "config = cxs.ImageConfig(shape, pixel_size, pad_scale=1.1)"
    ]
   },
   {
@@ -113,7 +113,7 @@
     "\n",
     "\n",
     "@partial(eqx.filter_vmap, in_axes=(0, None), out_axes=eqxi.if_mapped(axis=0))\n",
-    "def make_pipeline(key: PRNGKeyArray, no_vmap: tuple[PyTree, ...]) -> cs.ImagePipeline:\n",
+    "def make_pipeline(key: PRNGKeyArray, no_vmap: tuple[PyTree, ...]) -> cxs.ImagePipeline:\n",
     "    config, potential, integrator, instrument = no_vmap\n",
     "    # ... instantiate rotations\n",
     "    rotation = SO3.sample_uniform(key)\n",
@@ -128,12 +128,12 @@
     "    # zero\n",
     "    offset_in_angstroms = jnp.pad(in_plane_offset_in_angstroms, ((0, 1),))\n",
     "    # ... build the pose\n",
-    "    pose = cs.QuaternionPose.from_rotation_and_translation(\n",
+    "    pose = cxs.QuaternionPose.from_rotation_and_translation(\n",
     "        rotation, offset_in_angstroms\n",
     "    )\n",
     "    # ... build the Specimen and ImagePipeline as usual and return\n",
-    "    specimen = cs.Specimen(potential, integrator, pose)\n",
-    "    return cs.ImagePipeline(config, specimen, instrument)"
+    "    specimen = cxs.Specimen(potential, integrator, pose)\n",
+    "    return cxs.ImagePipeline(config, specimen, instrument)"
    ]
   },
   {
@@ -177,13 +177,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import cryojax.core as cjc\n",
+    "import cryojax as cx\n",
     "\n",
     "\n",
     "# ... specify which leaves we would like to vmap over\n",
     "where = lambda pipeline: pipeline.specimen.pose\n",
     "# ... use a cryojax wrapper to return a filter_spec\n",
-    "filter_spec = cjc.get_filter_spec(pipeline, where)"
+    "filter_spec = cx.get_filter_spec(pipeline, where)"
    ]
   },
   {
@@ -204,7 +204,7 @@
     "import equinox as eqx\n",
     "\n",
     "\n",
-    "@partial(cjc.filter_vmap_with_spec, filter_spec=filter_spec)\n",
+    "@partial(cx.filter_vmap_with_spec, filter_spec=filter_spec)\n",
     "def compute_image_stack(pipeline):\n",
     "    \"\"\"Compute a batch of images at different poses,\n",
     "    specified by the `filter_spec`.\n",
