--- a/docs/examples/simulate-micrograph.ipynb
+++ b/docs/examples/simulate-micrograph.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "In this tutorial, we will simulate a naive model of a micrograph. In particular, we will simulate a batch of images of the same particle at random poses, then sum over them.\n",
     "\n",
-    "The goal of this tutorial is to learn how to vmap in `cryojax`'s recommended pattern. Namely, we will demonstrate this pattern using utilities in `cryojax.core`. These utilities are lightweight wrappers around `equinox`."
+    "The goal of this tutorial is to learn how to vmap in `cryojax`'s recommended pattern. This uses the lightweight wrappers around `equinox` in `cryojax`."
    ]
   },
   {
@@ -192,7 +192,7 @@
    "source": [
     "Here, `filter_spec` is a pytree of booleans of the same structure as `pipeline`. The values are `True` at leaves that we do want to `vmap` over and `False` where we don't. Filtered transformations are a cornerstone to `equinox` and it is highly recommended to learn about them. See [here](https://docs.kidger.site/equinox/examples/frozen_layer/) in the equinox documentation for reading.\n",
     "\n",
-    "Above we have used a `cryojax` utility routine for creating a `filter_spec`, called `cryojax.core.get_filter_spec`. Next, we will finally define functions to batch and sum over images! To do this, we will again use a `cryojax` wrapper to `equinox` called `filter_vmap_with_spec`. This batches over a pytree, only at leaves specified by `filter_spec`. "
+    "Above we have used a `cryojax` utility routine for creating a `filter_spec`, called `cryojax.get_filter_spec`. Next, we will finally define functions to batch and sum over images! To do this, we will again use a `cryojax` wrapper to `equinox` called `filter_vmap_with_spec`. This batches over a pytree, only at leaves specified by `filter_spec`. "
    ]
   },
   {
