--- a/docs/examples/simulate-micrograph.ipynb
+++ b/docs/examples/simulate-micrograph.ipynb
@@ -73,19 +73,20 @@
     "potential = cxs.FourierVoxelGridPotential.from_real_voxel_grid(\n",
     "    real_voxel_grid, voxel_size, pad_scale=2\n",
     ")\n",
-    "integrator = cxs.FourierSliceExtract(interpolation_order=1)\n",
-    "\n",
-    "# ... and build the instrument\n",
-    "voltage_in_kilovolts = 300.0\n",
-    "optics = cxs.WeakPhaseOptics(\n",
-    "    ctf=cxs.CTF(\n",
+    "# ... now the projection method\n",
+    "projection_method = cxs.FourierSliceExtract(interpolation_order=1)\n",
+    "# ... and the contrast transfer theory\n",
+    "transfer_theory = cxs.ContrastTransferTheory(\n",
+    "    transfer_function=cxs.ContrastTransferFunction(\n",
     "        defocus_u_in_angstroms=10000.0,\n",
     "        defocus_v_in_angstroms=10000.0,\n",
     "    )\n",
     ")\n",
-    "instrument = cxs.Instrument(voltage_in_kilovolts, optics=optics)\n",
+    "# ... and the instrument\n",
+    "voltage_in_kilovolts = 300.0\n",
+    "instrument = cxs.Instrument(voltage_in_kilovolts)\n",
     "\n",
-    "# ... and finally the config\n",
+    "# ... finally, the config\n",
     "shape = (400, 600)\n",
     "pixel_size = potential.voxel_size  # Angstroms\n",
     "image_size = np.asarray(shape) * pixel_size\n",
@@ -114,7 +115,7 @@
     "\n",
     "@partial(eqx.filter_vmap, in_axes=(0, None), out_axes=eqxi.if_mapped(axis=0))\n",
     "def make_pipeline(key: PRNGKeyArray, no_vmap: tuple[PyTree, ...]) -> cxs.ImagePipeline:\n",
-    "    config, potential, integrator, instrument = no_vmap\n",
+    "    config, potential, projection_method, instrument = no_vmap\n",
     "    # ... instantiate rotations\n",
     "    rotation = SO3.sample_uniform(key)\n",
     "    # ... now in-plane translation\n",
@@ -131,9 +132,11 @@
     "    pose = cxs.QuaternionPose.from_rotation_and_translation(\n",
     "        rotation, offset_in_angstroms\n",
     "    )\n",
-    "    # ... build the Specimen and ImagePipeline as usual and return\n",
-    "    specimen = cxs.Specimen(potential, integrator, pose)\n",
-    "    return cxs.ImagePipeline(config, specimen, instrument)"
+    "    # ... build the ensemble\n",
+    "    ensemble = cxs.BaseEnsemble(potential, pose)\n",
+    "    # ... and finally the scattering theory and return\n",
+    "    theory = cxs.LinearScatteringTheory(ensemble, projection_method, transfer_theory)\n",
+    "    return cxs.ImagePipeline(config, theory, instrument)"
    ]
   },
   {
@@ -159,7 +162,7 @@
     "keys = jax.random.split(jax.random.PRNGKey(12345), number_of_poses)\n",
     "\n",
     "# ... instantiate the pipeline\n",
-    "pipeline = make_pipeline(keys, (config, potential, integrator, instrument))"
+    "pipeline = make_pipeline(keys, (config, potential, projection_method, instrument))"
    ]
   },
   {
@@ -175,13 +178,28 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'ImagePipeline' object has no attribute 'specimen'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[7], line 7\u001b[0m\n\u001b[1;32m      5\u001b[0m where \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mlambda\u001b[39;00m pipeline: pipeline\u001b[38;5;241m.\u001b[39mspecimen\u001b[38;5;241m.\u001b[39mpose\n\u001b[1;32m      6\u001b[0m \u001b[38;5;66;03m# ... use a cryojax wrapper to return a filter_spec\u001b[39;00m\n\u001b[0;32m----> 7\u001b[0m filter_spec \u001b[38;5;241m=\u001b[39m \u001b[43mcx\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_filter_spec\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpipeline\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mwhere\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/Library/CloudStorage/OneDrive-HarvardUniversity/needleman/projects/cryojax/src/cryojax/_filter_specs.py:39\u001b[0m, in \u001b[0;36mget_filter_spec\u001b[0;34m(pytree, where, inverse, is_leaf)\u001b[0m\n\u001b[1;32m     37\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m inverse:\n\u001b[1;32m     38\u001b[0m     false_pytree \u001b[38;5;241m=\u001b[39m jtu\u001b[38;5;241m.\u001b[39mtree_map(\u001b[38;5;28;01mlambda\u001b[39;00m _: \u001b[38;5;28;01mFalse\u001b[39;00m, pytree)\n\u001b[0;32m---> 39\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43meqx\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtree_at\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m     40\u001b[0m \u001b[43m        \u001b[49m\u001b[43mwhere\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mfalse_pytree\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mreplace_fn\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mlambda\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43m_\u001b[49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mis_leaf\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mis_leaf\u001b[49m\n\u001b[1;32m     41\u001b[0m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     42\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m     43\u001b[0m     true_pytree \u001b[38;5;241m=\u001b[39m jtu\u001b[38;5;241m.\u001b[39mtree_map(\u001b[38;5;28;01mlambda\u001b[39;00m _: \u001b[38;5;28;01mTrue\u001b[39;00m, pytree)\n",
+      "File \u001b[0;32m~/mambaforge/envs/cryojax/lib/python3.10/site-packages/equinox/_tree.py:139\u001b[0m, in \u001b[0;36mtree_at\u001b[0;34m(where, pytree, replace, replace_fn, is_leaf)\u001b[0m\n\u001b[1;32m     61\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"Modifies a leaf or subtree of a PyTree. (A bit like using `.at[].set()` on a JAX\u001b[39;00m\n\u001b[1;32m     62\u001b[0m \u001b[38;5;124;03marray.)\u001b[39;00m\n\u001b[1;32m     63\u001b[0m \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    114\u001b[0m \u001b[38;5;124;03m    See also the [Tricks](../../tricks) page.\u001b[39;00m\n\u001b[1;32m    115\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m  \u001b[38;5;66;03m# noqa: E501\u001b[39;00m\n\u001b[1;32m    117\u001b[0m \u001b[38;5;66;03m# We need to specify a particular node in a PyTree.\u001b[39;00m\n\u001b[1;32m    118\u001b[0m \u001b[38;5;66;03m# This is surprisingly difficult to do! As far as I can see, pretty much the only\u001b[39;00m\n\u001b[1;32m    119\u001b[0m \u001b[38;5;66;03m# way of doing this is to specify e.g. `x.foo[0].bar` via `is`, and then pulling\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    137\u001b[0m \u001b[38;5;66;03m# Whilst we're here: we also double-check that `where` is well-formed and doesn't\u001b[39;00m\n\u001b[1;32m    138\u001b[0m \u001b[38;5;66;03m# use leaf information. (As else `node_or_nodes` will be wrong.)\u001b[39;00m\n\u001b[0;32m--> 139\u001b[0m node_or_nodes_nowrapper \u001b[38;5;241m=\u001b[39m \u001b[43mwhere\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpytree\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    140\u001b[0m pytree \u001b[38;5;241m=\u001b[39m jtu\u001b[38;5;241m.\u001b[39mtree_map(_LeafWrapper, pytree, is_leaf\u001b[38;5;241m=\u001b[39mis_leaf)\n\u001b[1;32m    141\u001b[0m node_or_nodes \u001b[38;5;241m=\u001b[39m where(pytree)\n",
+      "Cell \u001b[0;32mIn[7], line 5\u001b[0m, in \u001b[0;36m<lambda>\u001b[0;34m(pipeline)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mcryojax\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mcx\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m# ... specify which leaves we would like to vmap over\u001b[39;00m\n\u001b[0;32m----> 5\u001b[0m where \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mlambda\u001b[39;00m pipeline: \u001b[43mpipeline\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mspecimen\u001b[49m\u001b[38;5;241m.\u001b[39mpose\n\u001b[1;32m      6\u001b[0m \u001b[38;5;66;03m# ... use a cryojax wrapper to return a filter_spec\u001b[39;00m\n\u001b[1;32m      7\u001b[0m filter_spec \u001b[38;5;241m=\u001b[39m cx\u001b[38;5;241m.\u001b[39mget_filter_spec(pipeline, where)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'ImagePipeline' object has no attribute 'specimen'"
+     ]
+    }
+   ],
    "source": [
     "import cryojax as cx\n",
     "\n",
     "\n",
     "# ... specify which leaves we would like to vmap over\n",
-    "where = lambda pipeline: pipeline.specimen.pose\n",
+    "where = lambda pipeline: pipeline.scattering_theory.potential_ensemble.pose\n",
     "# ... use a cryojax wrapper to return a filter_spec\n",
     "filter_spec = cx.get_filter_spec(pipeline, where)"
    ]
@@ -197,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
