--- a/docs/examples/read-dataset.ipynb
+++ b/docs/examples/read-dataset.ipynb
@@ -85,11 +85,7 @@
       "    pixel_size=f32[],\n",
       "    padded_shape=(100, 100),\n",
       "    pad_mode='constant',\n",
-      "    rescale_method='bicubic',\n",
-      "    wrapped_frequency_grid=FrequencyGrid(array=f32[100,51,2]),\n",
-      "    wrapped_padded_frequency_grid=FrequencyGrid(array=f32[100,51,2]),\n",
-      "    wrapped_coordinate_grid=CoordinateGrid(array=f32[100,100,2]),\n",
-      "    wrapped_padded_coordinate_grid=CoordinateGrid(array=f32[100,100,2])\n",
+      "    rescale_method='bicubic'\n",
       "  ),\n",
       "  pose=EulerAnglePose(\n",
       "    offset_x_in_angstroms=f32[],\n",
@@ -99,11 +95,11 @@
       "    view_theta=f32[],\n",
       "    view_psi=f32[]\n",
       "  ),\n",
-      "  ctf=CTF(\n",
+      "  ctf=ContrastTransferFunction(\n",
       "    defocus_u_in_angstroms=f32[],\n",
       "    defocus_v_in_angstroms=f32[],\n",
       "    astigmatism_angle=f32[],\n",
-      "    voltage_in_kilovolts=f32[],\n",
+      "    voltage_in_kilovolts=300.0,\n",
       "    spherical_aberration_in_mm=f32[],\n",
       "    amplitude_contrast_ratio=f32[],\n",
       "    phase_shift=f32[]\n",
@@ -213,11 +209,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CTF(\n",
+      "ContrastTransferFunction(\n",
       "  defocus_u_in_angstroms=Array([10050.97, 10050.97, 10050.97], dtype=float32),\n",
       "  defocus_v_in_angstroms=Array([9999.999, 9999.999, 9999.999], dtype=float32),\n",
       "  astigmatism_angle=Array([-54.58706, -54.58706, -54.58706], dtype=float32),\n",
-      "  voltage_in_kilovolts=Array(300., dtype=float32),\n",
+      "  voltage_in_kilovolts=300.0,\n",
       "  spherical_aberration_in_mm=Array(2.7, dtype=float32),\n",
       "  amplitude_contrast_ratio=Array(0.1, dtype=float32),\n",
       "  phase_shift=Array([0., 0., 0.], dtype=float32)\n",
