notebook and lint fix

--- a/docs/examples/simulate-image.ipynb
+++ b/docs/examples/simulate-image.ipynb
@@ -4,9 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This tutorial demonstrates a basic usage of the image formation pipeline in `cryojax`.\n",
-    "\n",
-    "It will demonstrate almost all of the modeling components that can be used when simulating a single image. This includes models for the instrument opticxs, electron dose rate, detector, and solvent. These models are all a work in progress."
+    "This tutorial demonstrates a basic usage of the image formation pipeline in `cryojax`."
    ]
   },
   {
@@ -54,7 +52,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First we must read in our 3D scattering potential into a given voxel-based representation of the `potential`. Here, this is the `FourierVoxelGrid`. Then, we choose an integration method onto the exit plane.  Here, we use the fourier-slice projection theorem with the `FourierSliceExtract` integrator. In general, the `integrator` will depend on the scattering potential representation."
+    "First we must read in our 3D scattering potential into a given voxel-based representation of the `potential`. Here, this is the `FourierVoxelGrid`. Then, the representation of a biological specimen is instantiated, which also includes a pose and conformational heterogeneity. Here, the `BaseEnsemble` class takes a pose but has no heterogeneity."
    ]
   },
   {
@@ -68,7 +66,7 @@
     "\n",
     "# Scattering potential stored in MRC format\n",
     "filename = \"./data/ribosome_4ug0_scattering_potential_from_cistem.mrc\"\n",
-    "# Read template into a FourierVoxelGridPotential and choose an integrator\n",
+    "# Read template into a FourierVoxelGridPotential\n",
     "real_voxel_grid, voxel_size = read_array_with_spacing_from_mrc(filename)\n",
     "potential = cxs.FourierVoxelGridPotential.from_real_voxel_grid(\n",
     "    real_voxel_grid, voxel_size, pad_scale=2\n",
@@ -90,7 +88,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, it's time to configure the imaging instrument. We can include models for the instrument optics, the electron dose, and the detector. Here, we create an instrument just with an optics model, and one that also includes a a detector model. We will see in a few lines why we have done this."
+    "Next, build the *scattering theory*. The simplest `theory` is the `LinearScatteringTheory`. This represents the usual image formation pipeline in cryo-EM, which forms images by computing projections of the potential and convolving the result with a contrast transfer function."
    ]
   },
   {
