--- a/docs/examples/read-dataset.ipynb
+++ b/docs/examples/read-dataset.ipynb
@@ -96,7 +96,7 @@
       "    view_theta=f32[],\n",
       "    view_psi=f32[]\n",
       "  ),\n",
-      "  ctf=ContrastTransferFunction(\n",
+      "  ctf=AberratedCTF(\n",
       "    defocus_u_in_angstroms=f32[],\n",
       "    defocus_v_in_angstroms=f32[],\n",
       "    astigmatism_angle=f32[],\n",
@@ -210,7 +210,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ContrastTransferFunction(\n",
+      "AberratedCTF(\n",
       "  defocus_u_in_angstroms=Array([10050.97, 10050.97, 10050.97], dtype=float32),\n",
       "  defocus_v_in_angstroms=Array([9999.999, 9999.999, 9999.999], dtype=float32),\n",
       "  astigmatism_angle=Array([-54.58706, -54.58706, -54.58706], dtype=float32),\n",
