--- a/docs/examples/simulate-image.ipynb
+++ b/docs/examples/simulate-image.ipynb
@@ -52,7 +52,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First we must read in our 3D scattering potential into a given voxel-based representation of the `potential`. Here, this is the `FourierVoxelGrid`. Then, the representation of a biological specimen is instantiated, which also includes a pose and conformational heterogeneity. Here, the `BaseEnsemble` class takes a pose but has no heterogeneity."
+    "First we must read in our 3D scattering potential into a given voxel-based representation of the `potential`. Here, this is the `FourierVoxelGrid`. Then, the representation of a biological specimen is instantiated, which also includes a pose and conformational heterogeneity. Here, the `SingleStructureEnsemble` class is used, which does not model heterogeneity."
    ]
   },
   {
@@ -81,7 +81,7 @@
     ")\n",
     "# ... now, build the ensemble. In this case, the ensemble is just one potential and a\n",
     "# pose\n",
-    "potential_ensemble = cxs.BaseEnsemble(potential, pose)"
+    "potential_ensemble = cxs.SingleStructureEnsemble(potential, pose)"
    ]
   },
   {
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
     "# Initialize the scattering theory. First, instantiate fourier slice extraction\n",
     "projection_method = cxs.FourierSliceExtract(interpolation_order=1)\n",
     "# ... next, the contrast transfer theory\n",
-    "ctf = cxs.ContrastTransferFunction(\n",
+    "ctf = cxs.AberratedCTF(\n",
     "    defocus_u_in_angstroms=10000.0,\n",
     "    defocus_v_in_angstroms=9800.0,\n",
     "    astigmatism_angle=10.0,\n",
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
