--- a/docs/examples/simulate-micrograph.ipynb
+++ b/docs/examples/simulate-micrograph.ipynb
@@ -77,7 +77,7 @@
     "projection_method = cxs.FourierSliceExtract(interpolation_order=1)\n",
     "# ... and the contrast transfer theory\n",
     "transfer_theory = cxs.ContrastTransferTheory(\n",
-    "    transfer_function=cxs.ContrastTransferFunction(\n",
+    "    transfer_function=cxs.AberratedCTF(\n",
     "        defocus_u_in_angstroms=10000.0,\n",
     "        defocus_v_in_angstroms=10000.0,\n",
     "    )\n",
@@ -132,9 +132,11 @@
     "        rotation, offset_in_angstroms\n",
     "    )\n",
     "    # ... build the ensemble\n",
-    "    ensemble = cxs.BaseEnsemble(potential, pose)\n",
+    "    potential_ensemble = cxs.SingleStructureEnsemble(potential, pose)\n",
     "    # ... and finally the scattering theory and return\n",
-    "    theory = cxs.LinearScatteringTheory(ensemble, projection_method, transfer_theory)\n",
+    "    theory = cxs.LinearScatteringTheory(\n",
+    "        potential_ensemble, projection_method, transfer_theory\n",
+    "    )\n",
     "    return cxs.ContrastImagingPipeline(config, theory)"
    ]
   },
