tests passing for API change

--- a/docs/examples/simulate-image.ipynb
+++ b/docs/examples/simulate-image.ipynb
@@ -81,7 +81,7 @@
     ")\n",
     "# ... now, build the ensemble. In this case, the ensemble is just one potential and a\n",
     "# pose\n",
-    "potential_ensemble = cxs.SingleStructureEnsemble(potential, pose)"
+    "structural_ensemble = cxs.SingleStructureEnsemble(potential, pose)"
    ]
   },
   {
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
     ")\n",
     "# ... now for the scattering theory\n",
     "scattering_theory = cxs.LinearScatteringTheory(\n",
-    "    potential_ensemble, projection_method, transfer_theory, solvent\n",
+    "    structural_ensemble, projection_method, transfer_theory, solvent\n",
     ")"
    ]
   },
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
