--- a/docs/examples/simulate-micrograph.ipynb
+++ b/docs/examples/simulate-micrograph.ipynb
@@ -132,10 +132,10 @@
     "        rotation, offset_in_angstroms\n",
     "    )\n",
     "    # ... build the ensemble\n",
-    "    potential_ensemble = cxs.SingleStructureEnsemble(potential, pose)\n",
+    "    structural_ensemble = cxs.SingleStructureEnsemble(potential, pose)\n",
     "    # ... and finally the scattering theory and return\n",
     "    theory = cxs.LinearScatteringTheory(\n",
-    "        potential_ensemble, projection_method, transfer_theory\n",
+    "        structural_ensemble, projection_method, transfer_theory\n",
     "    )\n",
     "    return cxs.ContrastImagingPipeline(config, theory)"
    ]
@@ -185,7 +185,7 @@
     "\n",
     "\n",
     "# ... specify which leaves we would like to vmap over\n",
-    "where = lambda pipeline: pipeline.scattering_theory.potential_ensemble.pose\n",
+    "where = lambda pipeline: pipeline.scattering_theory.structural_ensemble.pose\n",
     "# ... use a cryojax wrapper to return a filter_spec\n",
     "filter_spec = cx.get_filter_spec(pipeline, where)"
    ]
