fix type hint error and add run-time type checking to tutorial notebooks

--- a/docs/examples/simulate-image.ipynb
+++ b/docs/examples/simulate-image.ipynb
@@ -39,13 +39,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First, import the `cryojax` simulator. We will import this with the import hooks from `jaxtyping`, which will give our functions run-time type checking capability. See [here](https://docs.kidger.site/jaxtyping/api/runtime-type-checking/#runtime-type-checking) to learn more."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# CryoJAX imports\n",
-    "import cryojax.simulator as cxs"
+    "from jaxtyping import install_import_hook\n",
+    "\n",
+    "\n",
+    "with install_import_hook(\"cryojax\", \"typeguard.typechecked\"):\n",
+    "    import cryojax.simulator as cxs"
    ]
   },
   {
