--- a/docs/examples/simulate-micrograph.ipynb
+++ b/docs/examples/simulate-micrograph.ipynb
@@ -49,9 +49,13 @@
    "outputs": [],
    "source": [
     "# CryoJAX imports\n",
-    "import cryojax.simulator as cxs\n",
-    "from cryojax.data import read_array_with_spacing_from_mrc\n",
-    "from cryojax.rotations import SO3"
+    "from jaxtyping import install_import_hook\n",
+    "\n",
+    "\n",
+    "with install_import_hook(\"cryojax\", \"typeguard.typechecked\"):\n",
+    "    import cryojax.simulator as cxs\n",
+    "    from cryojax.data import read_array_with_spacing_from_mrc\n",
+    "    from cryojax.rotations import SO3"
    ]
   },
   {
