make quaternion -> euler angle conversion public API

--- a/docs/examples/pose-inference.ipynb
+++ b/docs/examples/pose-inference.ipynb
@@ -51,16 +51,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import cryojax.simulator as cxs\n",
-    "from cryojax.data import read_array_with_spacing_from_mrc\n",
-    "\n",
-    "\n",
-    "# Instantiate the scattering potential\n",
-    "filename = \"./data/ribosome_4ug0_scattering_potential_from_cistem.mrc\"\n",
-    "real_voxel_grid, voxel_size = read_array_with_spacing_from_mrc(filename)\n",
-    "potential = cxs.FourierVoxelGridPotential.from_real_voxel_grid(\n",
-    "    real_voxel_grid, voxel_size, pad_scale=1.5\n",
-    ")"
+    "import cryojax.simulator as cxs"
    ]
   },
   {
@@ -92,12 +83,13 @@
     "    return normalize_image(image, is_real=True)\n",
     "\n",
     "\n",
-    "make_config_fn = lambda shape, pixel_size: cxs.ImageConfig(\n",
-    "    shape, pixel_size, padded_shape=potential.shape[0:2]\n",
+    "make_config_fn = lambda shape, pixel_size, voltage_in_kilovolts: cxs.InstrumentConfig(\n",
+    "    shape, pixel_size, voltage_in_kilovolts, padded_shape=potential.shape[0:2]\n",
     ")\n",
     "dataset = RelionDataset(\n",
     "    path_to_starfile=\"./data/ribosome_4ug0_particles.star\",\n",
     "    path_to_relion_project=\"./\",\n",
+    "    make_instrument_config_fn=make_config_fn,\n",
     ")\n",
     "\n",
     "particle_stack = dataset[:3]\n",
@@ -169,7 +161,7 @@
     "    dataset.path_to_relion_project,\n",
     "    dataset.data_blocks[\"particles\"].iloc[0][\"rlnMicrographName\"],\n",
     ")\n",
-    "micrograph = normalize_image(read_array_from_mrc(path_to_micrograph))\n",
+    "micrograph = normalize_image(jnp.asarray(read_array_from_mrc(path_to_micrograph)))\n",
     "cropped_micrograph = micrograph[400:1000, :600]\n",
     "\n",
     "fig, axes = plt.subplot_mosaic(\n",
@@ -230,6 +222,7 @@
     "import equinox.internal as eqxi\n",
     "import jax\n",
     "\n",
+    "from cryojax.data import read_array_with_spacing_from_mrc\n",
     "from cryojax.rotations import SO3\n",
     "\n",
     "\n",
@@ -240,7 +233,19 @@
     "\n",
     "number_of_poses = 100_000\n",
     "keys = jax.random.split(jax.random.PRNGKey(0), number_of_poses)\n",
-    "pose_grid = make_pose_grid(keys)"
+    "pose_grid = make_pose_grid(keys)\n",
+    "\n",
+    "# Instantiate the scattering potential\n",
+    "filename = \"./data/ribosome_4ug0_scattering_potential_from_cistem.mrc\"\n",
+    "real_voxel_grid, voxel_size = read_array_with_spacing_from_mrc(filename)\n",
+    "potential = cxs.FourierVoxelGridPotential.from_real_voxel_grid(\n",
+    "    real_voxel_grid, voxel_size, pad_scale=1.5\n",
+    ")\n",
+    "\n",
+    "# ... now, build the biological specimen\n",
+    "structural_ensemble = cxs.SingleStructureEnsemble(\n",
+    "    conformational_space=potential, pose=pose_grid\n",
+    ")"
    ]
   },
   {
@@ -249,11 +254,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Build cryojax specimen\n",
-    "# ... now instantiate fourier slice extraction\n",
-    "integrator = cxs.FourierSliceExtract(interpolation_order=1)\n",
-    "# ... now, build the biological specimen\n",
-    "specimen = cxs.Specimen(potential, integrator, pose_grid)"
+    "# Build cryojax specimen"
    ]
   },
   {
@@ -267,13 +268,13 @@
     "\n",
     "\n",
     "@partial(eqx.filter_vmap, in_axes=(0, None), out_axes=eqxi.if_mapped(axis=0))\n",
-    "def make_optics(vmap, no_vmap):\n",
+    "def make_transfer_theory(vmap, no_vmap):\n",
     "    ctf = eqx.combine(vmap, no_vmap)\n",
-    "    return cxs.WeakPhaseOptics(ctf)\n",
+    "    return cxs.ContrastTransferTheory(ctf)\n",
     "\n",
     "\n",
     "ctf_filter_spec = cx.get_filter_spec(\n",
-    "    particle_stack.ctf,\n",
+    "    particle_stack.transfer_function,\n",
     "    lambda x: (\n",
     "        x.defocus_u_in_angstroms,\n",
     "        x.defocus_v_in_angstroms,\n",
@@ -281,14 +282,19 @@
     "        x.phase_shift,\n",
     "    ),\n",
     ")\n",
-    "per_particle_ctf, optics_group_ctf = eqx.partition(particle_stack.ctf, ctf_filter_spec)\n",
-    "optics = make_optics(per_particle_ctf, optics_group_ctf)\n",
-    "instrument = cxs.Instrument(\n",
-    "    voltage_in_kilovolts=particle_stack.ctf.voltage_in_kilovolts, optics=optics\n",
+    "per_particle_ctf, optics_group_ctf = eqx.partition(\n",
+    "    particle_stack.transfer_function, ctf_filter_spec\n",
+    ")\n",
+    "transfer_theory = make_transfer_theory(per_particle_ctf, optics_group_ctf)\n",
+    "\n",
+    "# ... now instantiate fourier slice extraction\n",
+    "projection_method = cxs.FourierSliceExtract(interpolation_order=1)\n",
+    "scattering_theory = cxs.LinearScatteringTheory(\n",
+    "    structural_ensemble, projection_method, transfer_theory\n",
     ")\n",
     "\n",
-    "pipeline = cxs.ImagePipeline(\n",
-    "    config=particle_stack.config, specimen=specimen, instrument=instrument\n",
+    "imaging_pipeline = cxs.ContrastImagingPipeline(\n",
+    "    particle_stack.instrument_config, scattering_theory\n",
     ")"
    ]
   },
@@ -302,7 +308,7 @@
     "\n",
     "\n",
     "per_particle_filter_spec = cx.get_filter_spec(\n",
-    "    pipeline,\n",
+    "    imaging_pipeline,\n",
     "    lambda p: (\n",
     "        p.instrument.optics.ctf.defocus_u_in_angstroms,\n",
     "        p.instrument.optics.ctf.defocus_v_in_angstroms,\n",
@@ -318,9 +324,9 @@
     "    return (\n",
     "        irfftn(\n",
     "            fourier_observed_image * jnp.conj(fourier_simulated_image),\n",
-    "            s=pipeline.config.shape,\n",
+    "            s=pipeline.instrument_config.shape,\n",
     "        )\n",
-    "        / pipeline.config.n_pix\n",
+    "        / pipeline.instrument_config.n_pix\n",
     "    )\n",
     "\n",
     "\n",
@@ -359,10 +365,12 @@
     "from cryojax.inference import tree_grid_take, tree_grid_unravel_index\n",
     "\n",
     "\n",
-    "tree_grid_filter_spec = cx.get_filter_spec(pipeline, lambda p: p.specimen.pose.wxyz)\n",
+    "tree_grid_filter_spec = cx.get_filter_spec(\n",
+    "    imaging_pipeline, lambda p: p.specimen.pose.wxyz\n",
+    ")\n",
     "\n",
     "pipeline_tree_grid, pipeline_non_tree_grid = eqx.partition(\n",
-    "    pipeline, tree_grid_filter_spec\n",
+    "    imaging_pipeline, tree_grid_filter_spec\n",
     ")\n",
     "per_particle_pipeline, non_per_particle_pipeline = eqx.partition(\n",
     "    pipeline_non_tree_grid, per_particle_filter_spec\n",
@@ -398,13 +406,16 @@
     ")\n",
     "fig, axes = plt.subplots(figsize=(9, 3.5), ncols=3)\n",
     "plot_image(\n",
-    "    irfftn(test_simulated_fourier_image_stack[0], s=pipeline.config.shape),\n",
+    "    irfftn(\n",
+    "        test_simulated_fourier_image_stack[0],\n",
+    "        s=imaging_pipeline.instrument_config.shape,\n",
+    "    ),\n",
     "    fig,\n",
     "    axes[0],\n",
     "    label=\"Test simiulated image\",\n",
     ")\n",
     "plot_image(\n",
-    "    irfftn(fourier_image_stack[0], s=pipeline.config.shape),\n",
+    "    irfftn(fourier_image_stack[0], s=imaging_pipeline.instrument_config.shape),\n",
     "    fig,\n",
     "    axes[1],\n",
     "    label=\"Test observed data\",\n",
@@ -549,9 +560,9 @@
     "    return (\n",
     "        irfftn(\n",
     "            fourier_observed_image * jnp.conj(fourier_simulated_image),\n",
-    "            s=pipeline.config.shape,\n",
+    "            s=pipeline.instrument_config.shape,\n",
     "        )\n",
-    "        / pipeline.config.n_pix\n",
+    "        / pipeline.instrument_config.n_pix\n",
     "    )"
    ]
   },
