--- a/docs/examples/pose-inference.ipynb
+++ b/docs/examples/pose-inference.ipynb
@@ -251,7 +251,7 @@
    "source": [
     "# Build cryojax specimen\n",
     "# ... now instantiate fourier slice extraction\n",
-    "integrator = cxs.FourierSliceExtract(interpolation_order=1)\n",
+    "integrator = cxs.FourierSliceExtraction(interpolation_order=1)\n",
     "# ... now, build the biological specimen\n",
     "specimen = cxs.Specimen(potential, integrator, pose_grid)"
    ]
