--- a/docs/examples/simulate-image.ipynb
+++ b/docs/examples/simulate-image.ipynb
@@ -112,7 +112,7 @@
     "\n",
     "\n",
     "# Initialize the scattering theory. First, instantiate fourier slice extraction\n",
-    "projection_method = cxs.FourierSliceExtract(interpolation_order=1)\n",
+    "projection_method = cxs.FourierSliceExtraction(interpolation_order=1)\n",
     "# ... next, the contrast transfer theory\n",
     "transfer_function = cxs.ContrastTransferFunction(\n",
     "    defocus_u_in_angstroms=10000.0,\n",
