--- a/docs/examples/simulate-micrograph.ipynb
+++ b/docs/examples/simulate-micrograph.ipynb
@@ -78,7 +78,7 @@
     "    real_voxel_grid, voxel_size, pad_scale=2\n",
     ")\n",
     "# ... now the projection method\n",
-    "projection_method = cxs.FourierSliceExtract(interpolation_order=1)\n",
+    "projection_method = cxs.FourierSliceExtraction(interpolation_order=1)\n",
     "# ... and the contrast transfer theory\n",
     "transfer_theory = cxs.ContrastTransferTheory(\n",
     "    transfer_function=cxs.ContrastTransferFunction(\n",
