integration_method -> potential_integrator

--- a/docs/examples/simulate-image.ipynb
+++ b/docs/examples/simulate-image.ipynb
@@ -112,7 +112,7 @@
     "\n",
     "\n",
     "# Initialize the scattering theory. First, instantiate fourier slice extraction\n",
-    "integration_method = cxs.FourierSliceExtraction(interpolation_order=1)\n",
+    "potential_integrator = cxs.FourierSliceExtraction(interpolation_order=1)\n",
     "# ... next, the contrast transfer theory\n",
     "ctf = cxs.ContrastTransferFunction(\n",
     "    defocus_in_angstroms=10000.0,\n",
@@ -129,7 +129,7 @@
     ")\n",
     "# ... now for the scattering theory\n",
     "scattering_theory = cxs.LinearScatteringTheory(\n",
-    "    structural_ensemble, integration_method, transfer_theory, solvent\n",
+    "    structural_ensemble, potential_integrator, transfer_theory, solvent\n",
     ")"
    ]
   },
