--- a/docs/examples/simulate-micrograph.ipynb
+++ b/docs/examples/simulate-micrograph.ipynb
@@ -78,7 +78,7 @@
     "    real_voxel_grid, voxel_size, pad_scale=2\n",
     ")\n",
     "# ... now the projection method\n",
-    "integration_method = cxs.FourierSliceExtraction(interpolation_order=1)\n",
+    "potential_integrator = cxs.FourierSliceExtraction(interpolation_order=1)\n",
     "# ... and the contrast transfer theory\n",
     "transfer_theory = cxs.ContrastTransferTheory(\n",
     "    ctf=cxs.ContrastTransferFunction(\n",
@@ -120,7 +120,7 @@
     "def make_imaging_pipeline(\n",
     "    key: PRNGKeyArray, no_vmap: tuple[PyTree, ...]\n",
     ") -> cxs.ContrastImagingPipeline:\n",
-    "    config, potential, integration_method = no_vmap\n",
+    "    config, potential, potential_integrator = no_vmap\n",
     "    # ... instantiate rotations\n",
     "    rotation = SO3.sample_uniform(key)\n",
     "    # ... now in-plane translation\n",
@@ -139,7 +139,7 @@
     "    structural_ensemble = cxs.SingleStructureEnsemble(potential, pose)\n",
     "    # ... and finally the scattering theory and return\n",
     "    theory = cxs.LinearScatteringTheory(\n",
-    "        structural_ensemble, integration_method, transfer_theory\n",
+    "        structural_ensemble, potential_integrator, transfer_theory\n",
     "    )\n",
     "    return cxs.ContrastImagingPipeline(config, theory)"
    ]
@@ -168,7 +168,7 @@
     "\n",
     "# ... instantiate the instrument_pipeline\n",
     "imaging_pipeline = make_imaging_pipeline(\n",
-    "    keys, (instrument_config, potential, integration_method)\n",
+    "    keys, (instrument_config, potential, potential_integrator)\n",
     ")"
    ]
   },
